   much more safety guarantees in how tasks are processed off
   main-thread and results proxied back to the destination thread.
   This greatly improves the guarantees we can provide to threaded
   workers. Threadpools are segmented by type kind of work, and tasks
   can be pinned to certain threadpools to choke the number of concurrent
   tasks in flight.
 • Most subsystems have now been ported to IdeTask to take advantage of
   our new threading engine.
 • A new "Runtime Terminal" shell has been provided which is a terminal
   in the runtime environment of the application. This means that
   desktop applications will have access to the wayland or X11 sockets
   if configured to do so in the flatpak manifest.
 • Builder tries harder to ignore minified JSON files when performing
   various background work like TODO extraction.
 • The buffer manager now short-circuits a file-save request when the
   buffer has not changed from the on-disk version.
 • The build manager tries to avoid rediagnosing in a number of situations.
 • The code-indexer interface has been improved to support off-main-thread
   indexing in an asynchronous manner. Clang and Vala indexers have been
   improved to support this.
 • A new sysroot plugin has been added to allow building against an alternate
   sysroot than that of the host system. We expect further expansion in this
   area for toolchain selection in the future.
 • A new ctrl+shift+k keybinding has been added to jump to symbol search
   within the current document.
 • Many API improvements to simplify access from language bindings.
 • Flatpak "simple" build systems now run the commands from the srcdir
   matching more closely to what flatpak-builder will do.
 • XML plugin improvements for performance and stability.
 • GDB integration now properly updates frames for the selected thread.

Updated Translations:

   Swedish, Indonesian, Lithuanian, Dutch, Czech, Italian,
   Brazilian Portuguese, Latvian
