@@ -1,6 +1,6 @@
 project('gnome-builder', 'c',
           license: 'GPL3+',
-          version: '3.29.0',
+          version: '3.29.1',
     meson_version: '>= 0.44.0',
   default_options: [ 'c_std=gnu11',
                      'cpp_std=c++11',
@@ -213,7 +213,7 @@ ld_supports_version_script = cc.links('''
 message('Linker supports --version-script: @0@'.format(ld_supports_version_script))
 
 # Commonly used deps
-libdazzle_dep = dependency('libdazzle-1.0', version: '>= 3.28.0')
+libdazzle_dep = dependency('libdazzle-1.0', version: '>= 3.29.1')
 libgio_dep = dependency('gio-2.0', version: '>= 2.56.0')
 libgiounix_dep = dependency('gio-unix-2.0')
 libgtk_dep = dependency('gtk+-3.0', version: '>= 3.22.26')
